--- a/po/de.po
+++ b/po/de.po
@@ -7,352 +7,431 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tenace 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-06-17 01:21+0200\n"
-"PO-Revision-Date: 2007-07-03 00:58+0200\n"
+"POT-Creation-Date: 2007-08-12 00:24+0200\n"
+"PO-Revision-Date: 2007-08-12 00:29+0200\n"
 "Last-Translator: Christoph Berg <cb@df7cb.de>\n"
 "Language-Team: Christoph Berg <cb@df7cb.de>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: src/interface.c:166
+#: src/bridge.c:211
+msgid "Card is not in your hand"
+msgstr "Karte ist nicht in Ihrer Hand"
+
+#: src/bridge.c:216
+msgid "Not your turn"
+msgstr "Nicht Ihr Zug"
+
+#: src/bridge.c:226
+msgid "Please follow suit"
+msgstr "Bitte Farbe bekennen"
+
+#: src/bridge.c:257
+msgid "Nothing to undo"
+msgstr "Nichts zurück zu nehmen"
+
+#: src/bridge.c:282
+msgid "No cards left to play"
+msgstr "Keine weiteren Karten zu spielen"
+
+#: src/bridge.c:286
+msgid "Which card should I play?"
+msgstr "Welche Karte soll ich spielen?"
+
+#: src/bridge.c:290
+msgid "Card was already played"
+msgstr "Karte wurde schon gespielt"
+
+#: src/bridge.c:294
+msgid "Card belongs to wrong player"
+msgstr "Karte gehört falschem Spieler"
+
+#: src/interface.c:168
 msgid "Tenace"
 msgstr ""
 
-#: src/interface.c:176
-msgid "_Datei"
-msgstr ""
+#: src/interface.c:178
+msgid "_File"
+msgstr "_Datei"
 
-#: src/interface.c:208
-msgid "Deal"
-msgstr "Austeilung"
+#: src/interface.c:210
+msgid "_Deal"
+msgstr "_Austeilung"
 
-#: src/interface.c:215
-msgid "Clear"
-msgstr "Leeren"
+#: src/interface.c:217
+msgid "_Clear"
+msgstr "_Leeren"
 
-#: src/interface.c:219
-msgid "Random"
-msgstr "Zufällig"
+#: src/interface.c:221
+msgid "_Random"
+msgstr "_Zufällig"
 
-#: src/interface.c:223
-msgid "Line"
-msgstr "Zeile"
+#: src/interface.c:225
+msgid "_Dealer"
+msgstr "_Teiler"
 
-#: src/interface.c:227
-msgid "Dealer"
-msgstr "Teiler"
+#: src/interface.c:232 src/interface.c:269
+msgid "_West"
+msgstr "_West"
 
-#: src/interface.c:234 src/interface.c:265 src/interface.c:640
-#: src/interface.c:1168 src/interface.c:1174
-msgid "West"
-msgstr "West"
+#: src/interface.c:237 src/interface.c:274
+msgid "_North"
+msgstr "_Nord"
 
-#: src/interface.c:240 src/interface.c:271 src/interface.c:1185
-msgid "North"
-msgstr "Nord"
+#: src/interface.c:242 src/interface.c:279
+msgid "_East"
+msgstr "_Ost"
 
-#: src/interface.c:246 src/interface.c:277 src/interface.c:1196
-msgid "East"
-msgstr "Ost"
-
-#: src/interface.c:252 src/interface.c:283 src/interface.c:1207
-msgid "South"
-msgstr "Süd"
+#: src/interface.c:247 src/interface.c:284
+msgid "_South"
+msgstr "_Süd"
 
 #: src/interface.c:258
-msgid "Contract"
-msgstr "Kontrakt"
+msgid "_New"
+msgstr "_Neu"
 
-#: src/interface.c:294
-msgid "No Trump"
-msgstr "Sans Atout"
+#: src/interface.c:262
+msgid "_Contract"
+msgstr "_Kontrakt"
+
+#: src/interface.c:295
+msgid "No _Trump"
+msgstr "_Sans Atout"
 
 #: src/interface.c:300
-msgid "♠ Spades"
-msgstr "♠ Pik"
+msgid "♠ S_pades"
+msgstr "♠ _Pik"
 
-#: src/interface.c:306
-msgid "♥ Hearts"
-msgstr "♥ Coeur"
+#: src/interface.c:305
+msgid "♥ _Hearts"
+msgstr "♥ _Coeur"
 
-#: src/interface.c:312
-msgid "♦ Diamonds"
-msgstr "♦ Karo"
+#: src/interface.c:310
+msgid "♦ _Diamonds"
+msgstr "♦ _Karo"
 
-#: src/interface.c:318
-msgid "♣ Clubs"
-msgstr "♣ Treff"
+#: src/interface.c:315
+msgid "♣ _Clubs"
+msgstr "♣ _Treff"
 
-#: src/interface.c:329
-msgid "Level"
-msgstr "Stufe"
+#: src/interface.c:326
+msgid "_Level"
+msgstr "Stu_fe"
 
-#: src/interface.c:336
-msgid "1"
+#: src/interface.c:333
+msgid "_1"
 msgstr ""
 
-#: src/interface.c:342
-msgid "2"
+#: src/interface.c:338
+msgid "_2"
+msgstr ""
+
+#: src/interface.c:343
+msgid "_3"
 msgstr ""
 
 #: src/interface.c:348
-msgid "3"
+msgid "_4"
 msgstr ""
 
-#: src/interface.c:354
-msgid "4"
+#: src/interface.c:353
+msgid "_5"
 msgstr ""
 
-#: src/interface.c:360
-msgid "5"
+#: src/interface.c:358
+msgid "_6"
 msgstr ""
 
-#: src/interface.c:366
-msgid "6"
+#: src/interface.c:363
+msgid "_7"
 msgstr ""
 
-#: src/interface.c:372
-msgid "7"
-msgstr ""
+#: src/interface.c:374
+msgid "_No double"
+msgstr "Kei_n Kontra"
 
-#: src/interface.c:383
-msgid "No double"
-msgstr "Kein Kontra"
+#: src/interface.c:379
+msgid "X _Doubled"
+msgstr "X _Kontra"
 
-#: src/interface.c:389
-msgid "X Doubled"
-msgstr "X Kontra"
+#: src/interface.c:384
+msgid "XX _Redoubled"
+msgstr "XX _Rekontra"
 
-#: src/interface.c:395
-msgid "XX Redoubled"
-msgstr "XX Rekontra"
+#: src/interface.c:390
+msgid "_Vulnerable"
+msgstr "_Gefahr"
 
-#: src/interface.c:401
-msgid "Vulnerable"
-msgstr "Gefahr"
+#: src/interface.c:397
+msgid "N_one"
+msgstr "_Keiner"
 
-#: src/interface.c:408
-msgid "None"
-msgstr "Keiner"
+#: src/interface.c:402
+msgid "_North-South"
+msgstr "_Nord-Süd"
 
-#: src/interface.c:414 src/interface.c:461
-msgid "North-South"
-msgstr "Nord-Süd"
+#: src/interface.c:407
+msgid "_East-West"
+msgstr "_Ost-West"
 
-#: src/interface.c:420
-msgid "East-West"
-msgstr "Ost-West"
+#: src/interface.c:412
+msgid "_All"
+msgstr "_Alle"
 
-#: src/interface.c:426
-msgid "All"
-msgstr "Alle"
-
-#: src/interface.c:432
+#: src/interface.c:418
 msgid "Score"
 msgstr ""
 
-#: src/interface.c:439
+#: src/interface.c:425
 msgid "Double dummy"
 msgstr "Double Dummy"
 
-#: src/interface.c:442 src/interface.c:608 src/interface.c:617
+#: src/interface.c:428 src/interface.c:614 src/interface.c:623
 msgid "Double dummy analysis"
 msgstr "Double-Dummy-Analyse"
 
-#: src/interface.c:444
+#: src/interface.c:430
 msgid "Parscore"
 msgstr ""
 
-#: src/interface.c:447
+#: src/interface.c:433
 msgid "Compute par score and contract"
 msgstr "Berechne Parscore und -Kontrakt"
 
-#: src/interface.c:449
+#: src/interface.c:435
 msgid "Play par"
 msgstr "Spiele Par"
 
-#: src/interface.c:452
+#: src/interface.c:438
 msgid "Set contract to computed par contract"
 msgstr "Setze Kontrakt auf berechneten Par"
 
-#: src/interface.c:454
+#: src/interface.c:440
 msgid "Positive for"
 msgstr "Positiv für"
 
-#: src/interface.c:467
+#: src/interface.c:447
+msgid "North-South"
+msgstr "Nord-Süd"
+
+#: src/interface.c:452
 msgid "Declarer"
 msgstr "Alleinspieler"
 
-#: src/interface.c:473
+#: src/interface.c:457
 msgid "Current lead"
 msgstr "Aktuell am Ausspiel"
 
-#: src/interface.c:479
-msgid "Board"
+#: src/interface.c:463
+msgid "Boards"
 msgstr ""
 
-#: src/interface.c:483
-msgid "_Bearbeiten"
+#: src/interface.c:467
+msgid "_Edit"
 msgstr ""
 
-#: src/interface.c:506
-msgid "_Ansicht"
+#: src/interface.c:490
+msgid "_View"
 msgstr ""
 
-#: src/interface.c:513 src/interface.c:1137
-msgid "Cards"
-msgstr "Karten"
+#: src/interface.c:497 src/interface.c:539
+msgid "_Cards"
+msgstr "_Karten"
 
-#: src/interface.c:517 src/interface.c:1088
-msgid "Bidding"
-msgstr "Reizung"
-
-#: src/interface.c:521 src/interface.c:1300
-msgid "Bids"
-msgstr "Gebote"
-
-#: src/interface.c:525 src/interface.c:1919
-msgid "Play"
-msgstr "Spiel"
-
-#: src/interface.c:534
-msgid "Played cards"
-msgstr "Gespielte Karten"
-
-#: src/interface.c:538
-msgid "_Hilfe"
+#: src/interface.c:501
+msgid "_Line entry"
 msgstr ""
 
-#: src/interface.c:545 src/interface.c:1416
+#: src/interface.c:505
+msgid "_Bidding"
+msgstr "_Reizung"
+
+#: src/interface.c:509
+msgid "Bi_ds"
+msgstr "_Gebote"
+
+#: src/interface.c:513
+msgid "Pla_y"
+msgstr "_Spiel"
+
+#: src/interface.c:522
+msgid "_Played cards"
+msgstr "_Gespielte Karten"
+
+#: src/interface.c:526
+msgid "Display _style"
+msgstr "Anzeige_stil"
+
+#: src/interface.c:533
+msgid "_Text"
+msgstr ""
+
+#: src/interface.c:544
+msgid "_Help"
+msgstr "_Hilfe"
+
+#: src/interface.c:551 src/interface.c:1356
 msgid "IMP Table"
-msgstr ""
+msgstr "IMP-Tabelle"
 
-#: src/interface.c:549
+#: src/interface.c:555
 msgid "_Info"
 msgstr ""
 
-#: src/interface.c:562
+#: src/interface.c:568
 msgid "Open board"
 msgstr "Öffne Board"
 
-#: src/interface.c:567
+#: src/interface.c:573
 msgid "Save board"
 msgstr "Speichere Board"
 
-#: src/interface.c:575
+#: src/interface.c:581
 msgid "Anfang"
 msgstr ""
 
-#: src/interface.c:578
+#: src/interface.c:584
 msgid "Rewind play"
 msgstr "Zurückspulen"
 
-#: src/interface.c:582
+#: src/interface.c:588
 msgid "Zurück"
 msgstr ""
 
-#: src/interface.c:585
+#: src/interface.c:591
 msgid "Undo card play"
 msgstr "Karte zurücknehmen"
 
-#: src/interface.c:589
+#: src/interface.c:595
 msgid "Vor"
 msgstr ""
 
-#: src/interface.c:592
+#: src/interface.c:598
 msgid "Play next card"
 msgstr "Nächste Karte spielen"
 
-#: src/interface.c:599
+#: src/interface.c:605
 msgid "Play all cards"
 msgstr "Alle Karten spielen"
 
-#: src/interface.c:622
+#: src/interface.c:628
 msgid "Par score"
 msgstr ""
 
-#: src/interface.c:657 src/interface.c:1190
-msgid "Ost"
-msgstr ""
-
-#: src/interface.c:674 src/interface.c:1179
+#: src/interface.c:648 src/interface.c:1155
 msgid "Nord"
 msgstr ""
 
-#: src/interface.c:691 src/interface.c:1201
-msgid "Süd"
-msgstr ""
-
-#: src/interface.c:696
-msgid ""
-"NS: 0\n"
-"EW: 0"
-msgstr ""
-
-#: src/interface.c:758
+#: src/interface.c:653
 msgid ""
 "Bd 1\n"
 "4♦X S"
 msgstr ""
 
-#: src/interface.c:1154
+#: src/interface.c:676 src/interface.c:1166
+msgid "Ost"
+msgstr ""
+
+#: src/interface.c:695 src/interface.c:1144 src/interface.c:1150
+msgid "West"
+msgstr "West"
+
+#: src/interface.c:700
+msgid ""
+"NS: 0\n"
+"EW: 0"
+msgstr ""
+
+#: src/interface.c:724 src/interface.c:1177
+msgid "Süd"
+msgstr ""
+
+#: src/interface.c:1069
+msgid "Bidding"
+msgstr "Reizung"
+
+#: src/interface.c:1113 src/interface.c:1943
+msgid "Cards"
+msgstr "Karten"
+
+#: src/interface.c:1130
 msgid "Clear board"
 msgstr "Board leeren"
 
-#: src/interface.c:1158
+#: src/interface.c:1134
 msgid "Zufall"
 msgstr ""
 
-#: src/interface.c:1161
+#: src/interface.c:1137
 msgid "Deal randomly"
 msgstr "Zufällig teilen"
 
-#: src/interface.c:1215
-msgid "♠"
-msgstr ""
+#: src/interface.c:1161
+msgid "North"
+msgstr "Nord"
 
-#: src/interface.c:1221
-msgid "<span foreground=\"red\">♥</span>"
-msgstr ""
+#: src/interface.c:1172
+msgid "East"
+msgstr "Ost"
 
-#: src/interface.c:1228
-msgid "<span foreground=\"orange\">♦</span>"
-msgstr ""
+#: src/interface.c:1183
+msgid "South"
+msgstr "Süd"
 
-#: src/interface.c:1235
-msgid "<span foreground=\"darkgreen\">♣</span>"
-msgstr ""
+#: src/interface.c:1240
+msgid "Bids"
+msgstr "Gebote"
 
-#: src/interface.c:1320
+#: src/interface.c:1260
 msgid "PASS"
 msgstr ""
 
-#: src/interface.c:1325
+#: src/interface.c:1265
 msgid "X"
 msgstr ""
 
-#: src/interface.c:1330
+#: src/interface.c:1270
 msgid "XX"
 msgstr ""
 
-#: src/interface.c:1822
+#: src/interface.c:1762
 msgid "Info"
 msgstr ""
 
-#: src/interface.c:1828
+#: src/interface.c:1768
 msgid ""
 "<b>tenace</b>\n"
 "\n"
 "(C) 2007 Christoph Berg &lt;cb@df7cb.de&gt;"
 msgstr ""
 
-#: src/interface.c:1873
+#: src/interface.c:1813
 msgid "Hand Line"
 msgstr "Hand als Zeile"
 
-#: src/interface.c:1883
+#: src/interface.c:1823
 msgid "63.A84.K853.KQ72 JT.QJT952.QJT62. Q9854.763.A7.A64 AK72.K.94.JT9853"
+msgstr ""
+
+#: src/interface.c:1859
+msgid "Play"
+msgstr "Spiel"
+
+#: src/interface.c:1903
+msgid "Options"
+msgstr "Optionen"
+
+#: src/interface.c:1926
+msgid "Card width: "
+msgstr ""
+
+#: src/interface.c:1933
+msgid "label94"
+msgstr ""
+
+#: src/interface.c:1951
+msgid "label96"
 msgstr ""
 
 #: src/support.c:90 src/support.c:114
