more alert tweaks, and fix a nasty malloc bug

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tenace (0.3) unstable; urgency=low
+
+  * New snapshot.
+
+ -- Christoph Berg <myon@debian.org>  Tue, 11 Dec 2007 00:34:22 +0100
+
 tenace (0.2) unstable; urgency=low
 
   * New snapshot.
