various build system fixes

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,17 +1,5 @@
-tenace (0.3) unstable; urgency=low
-
-  * New snapshot.
-
- -- Christoph Berg <myon@debian.org>  Tue, 11 Dec 2007 00:34:22 +0100
-
-tenace (0.2) unstable; urgency=low
-
-  * New snapshot.
-
- -- Christoph Berg <myon@debian.org>  Wed, 28 Nov 2007 20:25:04 +0100
-
-tenace (0.1) unstable; urgency=low
+tenace (0.3-1) unstable; urgency=low
 
   * Initial release.
 
- -- Christoph Berg <myon@debian.org>  Sat, 16 Jun 2007 14:54:27 +0200
+ -- Christoph Berg <myon@debian.org>  Sun, 06 Jan 2008 22:28:27 +0100
