--- a/doc/tenace.6
+++ b/doc/tenace.6
@@ -1,4 +1,4 @@
-.TH TENACE 6 2007-08
+.TH TENACE 6 2008-01
 .SH NAME
 tenace \- Bridge hand viewer and editor
 .SH SYNOPSIS
@@ -8,10 +8,10 @@ tenace \- Bridge hand viewer and editor
 is a bridge hand viewer and editor.
 .SH OPTIONS
 .TP
-.I [\fIfilename\fP]
-Load \fIfilename\fP. Supported formats are: lin, pbn.
+.I filename
+Load hand records from \fIfilename\fP.
 .SH COPYRIGHT
-Copyright (C) 2005-2007 Christoph Berg <cb@df7cb.de>
+Copyright (C) 2005-2008 Christoph Berg <cb@df7cb.de>
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
