--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,19 @@ tenace (0.4) upstream; urgency=low
 
 tenace (0.3) upstream; urgency=low
 
-  * Initial release.
+  * Initial public release.
 
  -- Christoph Berg <myon@debian.org>  Sun, 06 Jan 2008 22:28:27 +0100
+
+tenace (0.2) upstream; urgency=low
+
+  * New snapshot.
+
+ -- Christoph Berg <myon@debian.org>  Wed, 28 Nov 2007 20:25:04 +0100
+
+tenace (0.1) upstream; urgency=low
+
+  * Initial release.
+  * Some bits of Bridge math in bridge.c were already written in 2005.
+
+ -- Christoph Berg <myon@debian.org>  Sat, 16 Jun 2007 14:54:27 +0200
