--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,14 @@
 tenace (0.4) upstream; urgency=low
 
   * lin parser:
-    + EW vuln was parsed incorrectly.
+    + EW vuln was parsed incorrectly; 0 is also none.
     + Fix parsing of tournament records.
   * File handling:
     + Do not free NULL pointers on re-opening files.
   * Bidding:
     + Fix "make bids for current contract".
 
- -- Christoph Berg <myon@debian.org>  Sun, 27 Jan 2008 01:20:44 +0100
+ -- Christoph Berg <myon@debian.org>  Sun, 27 Jan 2008 01:51:51 +0100
 
 tenace (0.3) upstream; urgency=low
 
