--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,14 @@
 tenace (0.4) upstream; urgency=low
 
-  * lin parser:
+  * File handling:
     + EW vuln was parsed incorrectly; 0 is also none.
     + Fix parsing of tournament records.
-  * File handling:
-    + Do not free NULL pointers on re-opening files.
+    + Store number of claimed tricks.
+    + Implement saving of multiple boards.
   * Bidding:
     + Fix "make bids for current contract".
 
- -- Christoph Berg <myon@debian.org>  Sun, 27 Jan 2008 01:51:51 +0100
+ -- Christoph Berg <myon@debian.org>  Sun, 27 Jan 2008 21:55:35 +0100
 
 tenace (0.3) upstream; urgency=low
 
