--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ tenace (0.4) upstream; urgency=low
     + Implement saving of multiple boards.
   * Bidding:
     + Fix "make bids for current contract".
+  * Add README and require gtk+ 2.12.
 
  -- Christoph Berg <myon@debian.org>  Sun, 27 Jan 2008 21:55:35 +0100
 
