--- a/ChangeLog
+++ b/ChangeLog
@@ -11,8 +11,9 @@ tenace (0.4) upstream; urgency=low
   * Bidding:
     + Fix "make bids for current contract".
   * Add README and require gtk+ 2.12.
+  * Translations: de.
 
- -- Christoph Berg <myon@debian.org>  Sun, 27 Jan 2008 21:55:35 +0100
+ -- Christoph Berg <myon@debian.org>  Thu, 07 Feb 2008 00:12:15 +0100
 
 tenace (0.3) upstream; urgency=low
 
