--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+tenace (0.5) upstream; urgency=low
+
+  * Use GTK_CHECK_VERSION to disable parts that require Gtk 2.10
+    (recently used menu) and 2.12 (tooltips for alert explanations).
+
+ -- Christoph Berg <myon@debian.org>  Sat, 09 Feb 2008 00:50:11 +0100
+
 tenace (0.4) upstream; urgency=low
 
   * File handling:
