--- a/README
+++ b/README
@@ -9,8 +9,11 @@ Requirements
 ------------
 
 Tenace was written on Debian GNU/Linux, but should run on any *NIX platform
-that features GTK+. Minimum version required is 2.12 due to the usage of
-GtkTooltip. To render images of cards, librsvg is used (though optional).
+that features GTK+. Recommended minimum version is 2.12 due to the usage of
+GtkTooltip. Tenace will still compile with older versions, but some features
+will be disabled, notably the recently-used boards menu and tooltip popups for
+alert explanations. To render images of cards, librsvg is used (though
+optional).
 
 Installation
 ------------
@@ -21,10 +24,17 @@ $ ./configure
 $ make
 # make install
 
+Translations
+------------
+
+Currently, there's only a German translation, feel free to submit more. (For
+technical reason, there's also an English translation that only contains four
+strings, though real en_US/en_GB translations would be welcome as well.)
+
 Feedback and Bugs
 -----------------
 
 I'd be happy to hear back from you, either by mail, or using the Debian bug
-tracking system.
+tracking system. I'm Myon on BBO, feel free to say hello there.
 
- -- Christoph Berg <cb@df7cb.de>  Sat, 02 Feb 2008 15:00:57 +0100
+ -- Christoph Berg <cb@df7cb.de>  Sat, 09 Feb 2008 00:53:19 +0100
