* Solver: Always use dealt cards for parscore computation.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+tenace (0.6) upstream; urgency=low
+
+  * Solver: Always use dealt cards for parscore computation.
+
+ -- Christoph Berg <myon@debian.org>  Sun, 10 Feb 2008 16:09:54 +0100
+
 tenace (0.5) upstream; urgency=low
 
   * Use GTK_CHECK_VERSION to disable parts that require Gtk 2.10
