--- a/README
+++ b/README
@@ -15,6 +15,11 @@ will be disabled, notably the recently-used boards menu and tooltip popups for
 alert explanations. To render images of cards, librsvg is used (though
 optional).
 
+Tenace uses Bo Haglund's excellent DDS double dummy solver library for
+discovering optimal leads and computing parscores.
+
+http://web.telia.com/~u88910365/
+
 Installation
 ------------
 
@@ -37,4 +42,4 @@ Feedback and Bugs
 I'd be happy to hear back from you, either by mail, or using the Debian bug
 tracking system. I'm Myon on BBO, feel free to say hello there.
 
- -- Christoph Berg <cb@df7cb.de>  Sat, 09 Feb 2008 00:53:19 +0100
+ -- Christoph Berg <cb@df7cb.de>  Sun, 10 Feb 2008 16:20:29 +0100
