--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tenace (0.6-1) unstable; urgency=low
+
+  * New upstream version.
+
+ -- Christoph Berg <myon@debian.org>  Sun, 10 Feb 2008 16:10:29 +0100
+
 tenace (0.5-1) unstable; urgency=low
 
   * New upstream version, will now also compile on Etch.
