--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
 tenace (0.6-1) unstable; urgency=low
 
   * New upstream version.
+  * Relax gtk+ Build-Depends, we check features at compile time (cf 0.5-1).
   * Suggest gnome-games-extra-data for more svg files.
 
- -- Christoph Berg <myon@debian.org>  Sun, 16 Mar 2008 02:02:04 +0100
+ -- Christoph Berg <myon@debian.org>  Sun, 16 Mar 2008 02:06:32 +0100
 
 tenace (0.5-1) unstable; urgency=low
 
