* Add contrib/bonded.svg for convenience.

--- a/README
+++ b/README
@@ -12,13 +12,13 @@ Tenace was written on Debian GNU/Linux, but should run on any *NIX platform
 that features GTK+. Recommended minimum version is 2.12 due to the usage of
 GtkTooltip. Tenace will still compile with older versions, but some features
 will be disabled, notably the recently-used boards menu and tooltip popups for
-alert explanations. To render images of cards, librsvg is used (though
-optional).
+alert explanations. To render images of cards, librsvg is used (other image
+formats to display cards work as well).
 
 Tenace uses Bo Haglund's excellent DDS double dummy solver library for
 discovering optimal leads and computing parscores.
 
-http://web.telia.com/~u88910365/
+http://web.telia.com/~u07502278/
 
 Installation
 ------------
@@ -28,6 +28,17 @@ $ ./configure --help
 $ ./configure
 $ make
 # make install
+
+If you are running Debian, get packages from the next Debian mirror. Users of
+Debian Etch (4.0) are referred to http://backports.org/.
+
+The contrib sub-directory contains some useful supplementary files:
+
+ * mailcap, mime.types: sample MIME configs to launch Tenace from web browsers
+   and mail clients. On Debian systems, mailcap will automatically be installed.
+   mime.types can be appended to your ~/.mime.types.
+ * bonded.svg: SVG data to render cards. Most probably already installed in
+   /usr/share/gnome-games-common/cards/ or the like by your Gnome installation.
 
 Translations
 ------------
@@ -42,4 +53,9 @@ Feedback and Bugs
 I'd be happy to hear back from you, either by mail, or using the Debian bug
 tracking system. I'm Myon on BBO, feel free to say hello there.
 
- -- Christoph Berg <cb@df7cb.de>  Sun, 10 Feb 2008 16:20:29 +0100
+Credits
+-------
+
+Mark Voorhies spotted a problem with greying out already-played cards.
+
+ -- Christoph Berg <cb@df7cb.de>  Mon, 24 Mar 2008 23:28:06 +0100
