--- a/ChangeLog
+++ b/ChangeLog
@@ -3,9 +3,10 @@ tenace (0.7) upstream; urgency=low
   * Use the currently loaded file for greying out already played cards, this
     looks nicer, and fixes the fact that grey.svg was not looked for in
     --prefix. Thanks to Mark Voorhies for spotting.
+  * Add contrib/bonded.svg for convenience.
   * Board list can be reordered via the options menu.
 
- -- Christoph Berg <myon@debian.org>  Mon, 24 Mar 2008 23:22:04 +0100
+ -- Christoph Berg <myon@debian.org>  Mon, 24 Mar 2008 23:50:38 +0100
 
 tenace (0.6) upstream; urgency=low
 
