--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tenace (0.7-1) unstable; urgency=low
+
+  * New upstream version.
+
+ -- Christoph Berg <myon@debian.org>  Mon, 24 Mar 2008 23:57:32 +0100
+
 tenace (0.6-1) unstable; urgency=low
 
   * New upstream version.
