--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tenace (0.8-1) unstable; urgency=low
+
+  * New upstream version.
+
+ -- Christoph Berg <myon@debian.org>  Thu, 27 Mar 2008 23:32:43 +0100
+
 tenace (0.7-1) unstable; urgency=low
 
   * New upstream version.
