--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,9 @@ tenace (0.8) upstream; urgency=low
 
   * Some lin parser improvements to rudimentarily parse BM2000 data.
   * New example: triple-coup.lin.
+  * GUI uses libglade.
 
- -- Christoph Berg <myon@debian.org>  Mon, 14 Apr 2008 22:37:29 +0200
+ -- Christoph Berg <myon@debian.org>  Sat, 09 Aug 2008 13:15:25 -0300
 
 tenace (0.7) upstream; urgency=low
 
