--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,11 @@
 tenace (0.8) upstream; urgency=low
 
   * Some lin parser improvements to rudimentarily parse BM2000 data.
+  * Include dds copy in our source to facilitate compilation on systems not
+    providing libdds.a.
   * New example: triple-coup.lin.
 
- -- Christoph Berg <myon@debian.org>  Mon, 14 Apr 2008 22:37:29 +0200
+ -- Christoph Berg <myon@debian.org>  Sat, 20 Sep 2008 01:24:19 +0200
 
 tenace (0.7) upstream; urgency=low
 
