Adding Build-Dependency on libglade2-dev.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 tenace (0.8-1) unstable; urgency=low
 
   * New upstream version.
+  * Adding Build-Dependency on libglade2-dev.
 
- -- Christoph Berg <myon@debian.org>  Thu, 27 Mar 2008 23:32:43 +0100
+ -- Christoph Berg <myon@debian.org>  Sat, 20 Sep 2008 01:37:47 +0200
 
 tenace (0.7-1) unstable; urgency=low
 
