--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+tenace (0.9) upstream; urgency=low
+
+  * Code ported to Windows for compiling with mingw32.
+
+ -- Christoph Berg <myon@debian.org>  Sun, 09 Aug 2009 21:46:31 +0200
+
 tenace (0.8) upstream; urgency=low
 
   * Implement printing, including "magic card" labels.
