--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tenace (0.9-1) unstable; urgency=low
+
+  * New upstream version.
+
+ -- Christoph Berg <myon@debian.org>  Sun, 09 Aug 2009 21:47:59 +0200
+
 tenace (0.8-1) unstable; urgency=low
 
   * New upstream version.
