--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+tenace (0.10) upstream; urgency=low
+
+  * Yet another GUI change, now using GtkBuilder.
+
+ -- Christoph Berg <myon@debian.org>  Mon, 02 Nov 2009 20:27:51 +0100
+
 tenace (0.9) upstream; urgency=low
 
   * Code ported to Windows for compiling with mingw32.
