--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,14 @@
-tenace (0.10-1) unstable; urgency=low
+tenace (0.8-3) unstable; urgency=low
 
-  * New upstream version.
-  * Upgrade to DH 7.
+  * Move EINVAL tweak into file.h so main.c sees it.
 
- -- Christoph Berg <myon@debian.org>  Mon, 02 Nov 2009 22:23:49 +0100
+ -- Christoph Berg <myon@debian.org>  Sat, 10 Apr 2010 21:35:32 +0200
 
-tenace (0.9-1) unstable; urgency=low
+tenace (0.8-2) unstable; urgency=low
 
-  * New upstream version.
+  * Use EINVAL on platforms where EMEDIUMTYPE is undefined.
 
- -- Christoph Berg <myon@debian.org>  Sun, 09 Aug 2009 21:47:59 +0200
+ -- Christoph Berg <myon@debian.org>  Sat, 10 Apr 2010 15:14:02 +0200
 
 tenace (0.8-1) unstable; urgency=low
 
