--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+tenace (0.11) upstream; urgency=low
+
+  * Show DDS version number in about dialog.
+
+ -- Christoph Berg <myon@debian.org>  Sun, 23 May 2010 13:11:54 +0200
+
 tenace (0.10) upstream; urgency=low
 
   * Yet another GUI change, now using GtkBuilder.
