--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ tenace (0.12-1) unstable; urgency=low
   * New upstream version.
     + Fixes building with --as-needed. Closes: #632104.
     + Updates for two yet another new locations of gnome-card-data svg files.
+    + handdisplay: include glib.h directly. Closes: #665618.
 
  -- Christoph Berg <myon@debian.org>  Wed, 06 Jul 2011 16:42:37 +0200
 
