--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tenace (0.13-1) unstable; urgency=low
+
+  * New upstream version.
+    + Links with -lm. Closes: #704794.
+
+ -- Christoph Berg <myon@debian.org>  Fri, 04 Oct 2013 22:01:11 +0200
+
 tenace (0.12-1) unstable; urgency=low
 
   * New upstream version.
