Support reading compressed svg files (.svgz).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 tenace (0.13) upstream; urgency=low
 
+  * Support reading compressed svg files (.svgz).
   * Explicitely link with -lm.
 
  -- Christoph Berg <myon@debian.org>  Fri, 04 Oct 2013 22:02:06 +0200
