On startup, show a random deal if no file is loaded.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ tenace (0.13) upstream; urgency=low
 
   * Support reading compressed svg files (.svgz).
   * Explicitely link with -lm.
+  * On startup, show a random deal if no file is loaded.
 
  -- Christoph Berg <myon@debian.org>  Fri, 04 Oct 2013 22:02:06 +0200
 
