--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ tenace (0.14-1) unstable; urgency=medium
 
   * New upstream version.
     + Font handling improved. Closes: #515572.
+    + Support lin files starting with qx||. Closes: #680912.
   * Install desktop file and icon. Closes: #738041.
 
  -- Christoph Berg <myon@debian.org>  Sun, 12 Jun 2016 15:39:54 +0200
